# python-chess

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.rst  README.rst  SQUARE_SET_PLAN.md  asv.conf.json  run_benchmark_coverage.py  run_benchmark_coverage.sh  test.py  test_binary_fen.py
.asv/results/: benchmarks.json
.asv/results/Kraktus/: machine.json
benchmarks/: __init__.py
chess/: __init__.py  binary_fen.py  gaviota.py  pgn.py  syzygy.py
rust_chess/: AGENTS.md  Cargo.toml  pyproject.toml
rust_chess/py_test/: test.py  test2.py
rust_chess/rust_chess/: __init__.py
rust_chess/src/: base_board.rs  board.rs  board_status.rs  lib.rs  patch.py  piece.rs  py_move.rs  square_set.rs  util.rs
